--- a/Resources/translations/victoire.fr.xliff
+++ b/Resources/translations/victoire.fr.xliff
@@ -26,8 +26,8 @@
         <source>form.appventus_victoirecorebundle_widgetrendertype.children.params.label</source>
         <target>Paramètres de la route</target>
       </trans-unit>
-      <trans-unit resname="form.appventus_victoirecorebundle_widgetrendertype.children.params.help_block">
-        <source>form.appventus_victoirecorebundle_widgetrendertype.children.params.help_block</source>
+      <trans-unit resname="form.appventus_victoirecorebundle_widgetrendertype.children.params.vic_help_block">
+        <source>form.appventus_victoirecorebundle_widgetrendertype.children.params.vic_help_block</source>
         <target>Copiez ici un tableau de paramètres au format json. Par ex. {"id": 1}</target>
       </trans-unit>
       <trans-unit resname="form.render.kind.choice.route">
